@@ -1,3 +1,8 @@
+2006-01-05 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b11
+
+ * Fix: When Magic quotes are on and Gallery runs on Windows,
+        \ in pathes was erased by stripslashes.
+
 2006-01-04 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b10
 
   * Fix: Adapted init.php to fit with phpBB2 2.0.19
